@@ -135,6 +135,7 @@ size_t strlcpy(char * dest, const char* src, size_t bufsize)
  *   RD_Cnv_tm_to_DTString
  *     Copies tm struct values into a date string. Returns 
  *     size_t length copied. Returns 0 if invalid tm struct.
+ *     Automatically URL Encodes colon and the plus sign.
 *****************************************************************/
 size_t RD_Cnv_tm_to_DTString(struct tm *tmptr,char * dest)
 {
